--- a/np.css
+++ b/np.css
@@ -3,6 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
+@font-face {
+    font-family: 'Zantiqa4F';
+    src: url('fonts/Zantiqa4F.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
 
 body {
     font-family: 'Segoe UI', sans-serif;
